add brands.html.twig and routes

--- a/views/store.html.twig
+++ b/views/store.html.twig
@@ -46,7 +46,7 @@
 
                   <button type="submit">Update</button>
                 </form>
-                <form action="/store/{{ store.getId }}" method="post">
+                <form action="/store/{{ store.getId }}/delete" method="post">
                   <input name="_method" type="hidden" value="delete">
 
                   <button type="submit">Delete this store</button>
