--- a/views/store.html.twig
+++ b/views/store.html.twig
@@ -26,8 +26,8 @@
             <div class="col-sm-6">
                 <h4>Add a brand to this store:</h4>
 
-                <form action='/add_brands' method='post'>
-                    <input id="store_id" name="store_id" type="hidden" value="{{ store.getId }}">
+                <form action='/store_add_brand' method='post'>
+                    <input id="brand_id" name="brand_id" type="hidden" value="{{ brand.getId }}">
                     <label for="brand_id">Select a brand</label>
                     <select id='brand_id' name='brand_id' type='text'>
                       {% for brand in all_brands %}
