add styling and images

--- a/views/brand.html.twig
+++ b/views/brand.html.twig
@@ -8,11 +8,11 @@
 <body>
     <div class="jumbotron">
         <h1>{{ brand.getBrandName }}</h1>
-        <h2><em>Add a store or delete a store.</em></h2>
+        <h2><em>Add a current store to this brand.</em></h2>
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-6 form">
                 <h1>{{ brand.getBrandName }}</h1>
 
                 {% if stores is not empty %}
@@ -23,36 +23,28 @@
                         {% endfor %}
                     </ul>
                 {% else %}
-                    <p>You currently don't have any stores! Use the form below to get started!</p>
+                    <p>You currently don't have any stores! Use the form below to get started! If there are no stores available, <a href="/stores">Click here</a> to add a store.</p>
                 {% endif %}
-                <!-- ADD STUDENT TO COURSE DROPDOWN -->
-                        <h3>Add a store</h3>
-                        <form action="/brand_add_store" method="post">
-                            <input id="store_id" = name="store_id" type="hidden" value="{{ store.getId }}">
+        <!-- ADD STORE TO BRAND DROPDOWN -->
+                <h3>Add a store</h3>
+                <form action="/brand_add_store" method="post">
+                    <input id="brand_id" = name="brand_id" type="hidden" value="{{ brand.getId }}">
 
-                            <label for="store_id">Select a store:</label>
-                            <select name="store_id" type="text" required>
-                                    {% for store in all_stores %}
-                                        <option value="{{ store.getId }}">{{ store.getStoreName }}</option>
-                                    {% endfor %}
-                            </select>
+                    <label for="store_id">Select a store:</label>
+                    <select name="store_id" type="text" required>
+                            {% for store in all_stores %}
+                                <option value="{{ store.getId }}">{{ store.getStoreName }}</option>
+                            {% endfor %}
+                    </select>
 
-                            <button type="submit">Add Store</button>
-                        </form>
-                <!-- {% if clients is not empty %}
-                    <h1>Here are {{ stylist.getStylistName() }}'s clients:</h1>
-                    <ul>
-                        {% for client in clients %}
-                            <h2><a href="/client/{{ client.getId }}">{{ client.getClientName }}</a></h2>
-                        {% endfor %}
-                    </ul>
-                {% else %}
-                <p>There are no clients yet! Add a client below.</p>
-                {% endif %} -->
+                    <button type="submit">Add Store</button>
+
+                </form>
             </div>
-            <div class="col-sm-6">
-                <!-- <h1><a href="/stylists_edit/{{ stylist.getId }}">Click here</a> to update <strong>{{ stylist.getStylistName() }}</strong>.</h1>
-                <h2><a href="/">Home</a></h2> -->
+            <div class="col-sm-6 form">
+                <h2><a href="/">Home</a></h2>
+                <h2><a href="/brands">Brands</a></h2>
+                <h2><a href="/stores">Stores</a></h2>
             </div>
         </div>
     </div>
