--- a/views/brands.html.twig
+++ b/views/brands.html.twig
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/styles.css" type="text/css">
-    <title>Shoe Brands</title>
+    <title>Brands</title>
 </head>
 <body>
     <div class="jumbotron">
@@ -40,6 +40,8 @@
                         <form action="/delete_all_brands" method="post">
                             <button type="submit">Delete ALL Brands</button>
                         </form>
+                    <h2><a href="/">Home</a></h2>
+                    <h2><a href="/stores">Stores</a></h2>
             </div>
         </div>
     </div>
