--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -12,11 +12,11 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-sm-6 form">
-                <h2><a href="/stores">Click here</a> to see all of the stores and add stores.</h2>
+            <div class="col-sm-6 index">
+                <p><a href="/stores">Stores</a></p>
             </div>
-            <div class="col-sm-6 form">
-                <h2><a href="/brands">Click here</a> to see all of the brands and add brands.</h2>
+            <div class="col-sm-6 index">
+                <p><a href="/brands">Brands</a></p>
             </div>
         </div>
     </div>
