--- a/views/brands.html.twig
+++ b/views/brands.html.twig
@@ -29,19 +29,19 @@
         <!-- END DISPLAY AREA -->
             </div>
             <div class="col-sm-6 form">
-                <!-- START ADD STUDENT FORM -->
-                        <form action="/add_brand" method="post">
-                            <label for="name">Brand Name:</label>
-                            <input type="text" name="brand_name" required>
+        <!-- START ADD BRAND FORM -->
+                <form action="/add_brand" method="post">
+                    <label for="name">Brand Name:</label>
+                    <input type="text" name="brand_name" required>
 
-                            <button type="submit">Add Brand</button>
-                        </form>
-                <!-- END ADD STUDENT FORM -->
-                        <form action="/delete_all_brands" method="post">
-                            <button type="submit">Delete ALL Brands</button>
-                        </form>
-                    <h2><a href="/">Home</a></h2>
-                    <h2><a href="/stores">Stores</a></h2>
+                    <button type="submit">Add Brand</button>
+                </form>
+        <!-- END ADD BRAND FORM -->
+                <form action="/delete_all_brands" method="post">
+                    <button type="submit">Delete ALL Brands</button>
+                </form>
+            <h2><a href="/">Home</a></h2>
+            <h2><a href="/stores">Stores</a></h2>
             </div>
         </div>
     </div>
