--- a/views/stores.html.twig
+++ b/views/stores.html.twig
@@ -27,7 +27,7 @@
                 <!-- END DISPLAY AREA -->
             </div>
             <div class="col-sm-6 form">
-                <!-- START ADD STUDENT FORM -->
+                <!-- START ADD STORE FORM -->
                         <form action="/add_store" method="post">
                             <label for="name">Store Name:</label>
                             <input type="text" name="store_name" required>
@@ -35,7 +35,7 @@
 
                             <button type="submit">Add Store</button>
                         </form>
-                <!-- END ADD STUDENT FORM -->
+                <!-- END ADD STORE FORM -->
                         <form action="/delete_all_stores" method="post">
                             <button type="submit">Delete ALL Stores</button>
                         </form>
