add more styling

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -35,6 +35,6 @@ color: lightgray;
     height: 200px;
 }
 .navbar {
-    background-color: darkorange;
+    background-color: #e59400;
     color: black;
 }
